--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,3 @@
-/* index1.css for index1.html
-A few styles to illustrate the structure and formatting of a
-CSS style file
-*/
-/* styles apply to every element in the body, unless overridden*/
-
 body {
   font-family: Ariel, Verdana, Helvetica, sans-serif;
   font-size: Medium;
@@ -26,5 +20,14 @@ h1 {
 }
 
 .carousel-indicators {
+  padding-bottom: 25px;
+}
+
+/* myResume */
+
+.download-buttons {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 75px;
   padding-bottom: 25px;
 }
