--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,11 @@ h1 {
 
 }/* overrides body font color style above */
 
+.center {
+  margin: auto;
+  width: 50%;
+}
+
 /* Navigation */
 
 .nav-item {
@@ -58,4 +63,11 @@ h1 {
   margin-right: auto;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+/* AboutMe */
+
+.aboutMe {
+  margin-left: 500px;
+  margin-right: auto;
 }
