--- a/css/index.css
+++ b/css/index.css
@@ -59,8 +59,8 @@ h1 {
 /* myResume */
 
 .download-buttons {
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 43.5%;
+  padding-right: 0;
   padding-top: 25px;
   padding-bottom: 25px;
 }
